--- a/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
@@ -16,7 +16,103 @@
  TR_ENG_the_end_of_the_great_game: "グレート・ゲームの終焉"
  TR_ENG_russia_land_britain_sea: "陸のロシア、海のブリテン"
  TR_ENG_fiscal_reconstruction: "財政再建"
-
-
+ TR_ENG_review_of_colonial_policy: "植民地政策の再検討"
+ TR_ENG_strengthening_the_dominion: ""自治領の強化
+ TR_ENG_autonomy_in_africa: "アフリカの自治への検討"
+ TR_ENG_EGY_one_ruler: "エジプトとの同君連合"
+ TR_ENG_autonisation_of_sudan: "スーダンの自治"
+ TR_ENG_all_african_autonomy: "アフリカの完全自治化"
+ TR_ENG_establish_neighbourhood_watch: "自警団の設立"
+ TR_ENG_imperial_conference: "帝国会議"
+ TR_ENG_dominion_expansion: "自治領の拡大"
+ TR_ENG_the_road_to_federalisation: "連邦化への道"
+ TR_ENG_military_decentralisation: "軍事的分散"
+ TR_ENG_joint_military_exercise: "総合軍事訓練"
+ TR_ENG_indian_affairs: "インド問題"
+ TR_ENG_suppressed_independence_movement: "独立運動を抑圧"
+ TR_ENG_strengthening_of_indian_control: "インド支配を強化"
+ TR_ENG_proximity_to_princely_states: "藩王国への接近"
+ TR_ENG_partition_of_india: "インド分割"
+ TR_ENG_british_raj: "インド帝国"
+ TR_ENG_compromise_to_INC: "国民会議との妥協"
+ TR_ENG_autonomy_in_india: "インドの自治化"
+ TR_ENG_compromise_republic: "君主制の妥協"
+ TR_ENG_crown_to_india: "インドに王冠を"
+ TR_ENG_dominion_india: "帝国自治領インド"
+ TR_ENG_steady_as_she_goes: "彼女のごとく着実に"
+ TR_ENG_withdrawal_france: "フランスからの撤退"
+ TR_ENG_anticommunist: "反共政策"
+ TR_ENG_supporting_spain: "スペインへの援助"
+ TR_ENG_revival_old_alliances: "古き同盟の復活"
+ TR_ENG_alliance_opposite_shore: "対岸との盟約"
+ TR_ENG_belgian_issue: "ベルギー問題"
+ TR_ENG_alliance_denmark: "デンマークとの協定"
+ TR_ENG_contacts_with_russia: "ロシアへの接触"
+ TR_ENG_RUS_allies: "ロシアとの同盟"
+ TR_ENG_those_driven_by_vengeance: "復讐に駆られる者たち"
+ TR_ENG_north_african_losers: "北アフリカの敗者"
+ TR_ENG_rhodes_loser: "ロードス島の敗者"
+ TR_ENG_governmet_in_exile_recognised: "亡命政府の承認"
+ TR_ENG_anticommunist_allies: "防共協定を拡大"
+ TR_ENG_rouse_the_giant: "巨人との交渉"
+ TR_ENG_colonial_security: "植民地防衛"
+ TR_ENG_far_eastern_security: "極東の安全保障"
+ TR_ENG_prepare_for_war: "戦争への備え"
+ TR_ENG_focus_on_defence: "防衛方針"
+ TR_ENG_focus_on_attack: "攻撃方針"
+ TR_ENG_shadow_scheme: "シャドウ計画"
+ TR_ENG_additional_research_slot: ""追加の研究枠
+ TR_ENG_war_economy: "戦争経済への移行"
+ TR_ENG_general_mobilisation: "国家総動員法"
+ TR_ENG_royal_ordinance: "ロイヤル・オーディナンス工場"
+ TR_ENG_focus_on_industry: "工業への注力"
+ TR_ENG_focus_on_shipbuilding: "造船への注力"
+ TR_ENG_military_expansion: "軍隊の改造"
+ TR_ENG_small_arms: "小火器への注力"
+ TR_ENG_focus_on_aircraft: "航空機製造への注力"
+ TR_ENG_full_scale_military_expansion: "本格的軍事改革"
+ TR_ENG_motorized_focus: "自動車化への注力"
+ TR_ENG_tank_focus: "戦車への注力"
+ TR_ENG_air_military_expansion_focus: "空軍改革"
+ TR_ENG_bomber_command_focus: "爆撃機への注力"
+ TR_ENG_fighter_command_focus: "戦闘機への注力"
+ TR_ENG_coastal_command_focus: "沿岸防衛への注力"
+ TR_ENG_aircraft_production_focus: "航空機生産の拡大"
+ TR_ENG_jet_focus: "ジェット機"
+ TR_ENG_naval_reform: "海軍改革"
+ TR_ENG_amphibious_focus: "上陸作戦"
+ TR_ENG_anti_non_contact_committee: "非接触委員会"
+ TR_ENG_destroyer_focus: "駆逐艦への注力"
+ TR_ENG_convoy_focus: "船団護衛重視"
+ TR_ENG_anti_submarine_training_school: "対潜訓練学校"
+ TR_ENG_a_s_warfare: "対潜水艦作戦"
+ TR_ENG_elect_few: "ブリタニアよ、大海原を統べよ"
+ TR_ENG_carrier_focus: "空母への注力"
+ TR_ENG_battleship_focus: "戦艦への注力"
+ TR_ENG_expand_the_repair_yards: "修繕用ドックの拡大"
+ TR_ENG_vanguards: "ヴァンガード"
+ TR_ENG_building_defence_networks: "防衛網の構築"
+ TR_ENG_air_defense_focus: "防空への注力"
+ TR_ENG_defence_assistance_to_opposite_shore: "対岸防衛"
+ TR_ENG_fortification_in_ally: "同盟国の余殃最下"
+ TR_ENG_focus_on_flak: "対空砲への注力"
+ TR_ENG_reinforced_flak: "対空砲の強化"
+ TR_ENG_flak_in_ally: "防空網"
+ TR_ENG_radar: "レーダー"
+ TR_ENG_reinforced_radar: "レーダーの強化"
+ TR_ENG_radar_in_ally: "レーダー網"
+ TR_ENG_protect_everything: "すべてを守れ"
+ TR_ENG_secret_weapon_development: "秘密兵器の開発"
+ TR_ENG_cooperation_USA: "協力要請"
+ TR_ENG_uranium_mining: "ウランの採掘"
+ TR_ENG_construction_of_reactors: "原子炉の建設"
+ TR_ENG_securing_research_staff: "研究員の確保"
+ TR_ENG_sahara_experiments: "サハラ実験"
+ TR_ENG_the_ultimate_weapon: "究極の兵器"
+ TR_ENG_maritime_fort: "沿岸要塞"
+ TR_ENG_prevention_of_landing: "上陸対策"
+ TR_ENG_reinforced_maritime_fort: "頑強たる海岸"
+ TR_ENG_fort_of_england: "イングランドの要塞化"
+ TR_ENG_absolute_defense_sphere: "絶対的防衛圏"
  TR_ENG_british_commonwealth: "コモンウェルス"
  TR_ENG_british_commonwealth_desc: "今此処にて帝國は一つとなる。\nすべての帝國自治領が王冠の下にて集い、真の帝國が築かれるであろう。"
