無断ロマン気に入らなければリバート

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -194,3 +194,27 @@
  SOUTH_SLAV_theocracy_DEF: "南スラブ教会"
  SOUTH_SLAV_fascism: "南スラブ帝国"
  SOUTH_SLAV_fascism_DEF: "南スラブ帝国"
+ 
+ GRA_COL: "グラン・コロンビア"
+ GRA_COL_DEF: "グラン・コロンビア"
+ GRA_COL_ADJ: "ボリバル"
+ GRA_COL_anarchism: "コロンビア解放地域"
+ GRA_COL_anarchism_DEF: "コロンビア解放地域"
+ GRA_COL_syndicalism: "ボリバル組合連盟"
+ GRA_COL_syndicalism_DEF: "ボリバル組合連盟"
+ GRA_COL_communism: "ボリバル社会主義共和国連邦"
+ GRA_COL_communism_DEF: "ボリバル社会主義共和国連邦"
+ GRA_COL_socialism: "ボリバル人民共和国"
+ GRA_COL_socialism_DEF: "ボリバル人民共和国"
+ GRA_COL_socialdemocratic: "ボリバル民主共和国"
+ GRA_COL_socialdemocratic_DEF: "ボリバル民主共和国"
+ GRA_COL_democratic: "大コロンビア共和国"
+ GRA_COL_democratic_DEF: "大コロンビア共和国"
+ GRA_COL_conservatism: "グラン・コロンビア"
+ GRA_COL_conservatism_DEF: "グラン・コロンビア"
+ GRA_COL_neutrality: "グラン・コロンビア"
+ GRA_COL_neutrality_DEF: "グラン・コロンビア"
+ GRA_COL_theocracy: "神聖コロンビア帝国"
+ GRA_COL_theocracy_DEF: "神聖コロンビア帝国"
+ GRA_COL_fascism: "大コロンビア帝国"
+ GRA_COL_fascism_DEF: "大コロンビア帝国"
