--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -7,7 +7,6 @@
  TR_japan.2.t: "議会中心主義"
  TR_japan.2.d: "浜口雄幸内閣総理大臣は昨日の国会答弁において以下の通りに述べた。「恐れ多くも天皇陛下が我ら臣民を統治しておられますのは憲法を見るまでもない事実ではございますが、それをお支えする我ら内閣および協賛機関たる帝国議会を天皇陛下はご信頼下さているのであります。つきましては、我ら帝国議会は帝国を世界一の列強へとなるその日まで知恵を振り絞って答えるのが道理でありましょう。我々こそが帝国を動かす最前線なのであります。」"
  TR_japan.2.a: "まったくもってその通りだ！"
- TR_japan.2.b: "そもそも天皇など信用ならん！"
  TR_japan.3.t: "皇室中心主義"
  TR_japan.3.d: "本日、政友会の重鎮である芳澤謙吉司法大臣は記者団に語った。「天皇陛下こそが帝国が帝国たるゆえんであることは帝国臣民皆が知ることである。であればだれが皇室こそが帝国の最優先事項であることを否定し得ようか。我ら臣民は畏れ多くも天皇陛下の前に等しく赤子であり、決して自己の利益を優先することがあってはならぬのである。」"
  TR_japan.3.a: "まったくもってその通りだ！"
@@ -75,7 +74,7 @@
  TR_japan.21.a: "巡洋艦だ"
  TR_japan.21.b: "駆逐艦だ。"
  TR_japan.22.t: "日本航空の未来"
- TR_japan.22.d: "同盟国イギリスからの技術支援を受けて生まれた日本航空機の卵は無事に孵化したようだ。これまでの歴史には日本航空に携わってすべての人間によって紡がれてきた一本のか細く、しかし確かな糸が見えてくる。我が国はもはや欧米列強を凌駕する先進的な航空機技術を獲得してのだ。"
+ TR_japan.22.d: "同盟国イギリスからの技術支援を受けて生まれた日本航空機の卵は無事に孵化したようだ。これまでの歴史には日本航空に携わってすべての人間によって紡がれてきた一本のか細く、しかし確かな糸が見えてくる。我が国はもはや欧米列強を凌駕する先進的な航空機技術を獲得したのだ。"
  TR_japan.22.a: "この糸はいつまでも紡がれるだろう"
  TR_japan.23.t: "帝国陸軍の未来"
  TR_japan.23.d: "日清戦争以降大規模な陸戦を経験していない陸軍は時代遅れの第二級の陸軍として国際社会から評価されていた。確かに、そのような時代もあったが今やそんな主張をするものは誰一人としていない。研究されつくした陸軍の組織にもはや全世界が注目している。"
