いろいろお

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -129,6 +129,8 @@
  
  CZESLO: "チェコスロバキア国"
  CZESLO_DEF: "チェコスロバキア国"
+ CZESLO_communism: "チェコスロバキア社会主義共和国"
+ CZESLO_communism_DEF: "チェコスロバキア国社会主義共和国"
  CZEZPL: "ザパドスラヴィア"
  CZEZPL_DEF: "ザパドスラヴィア"
  HROM: "神聖ローマニア軍団国"
