--- a/localisation/TR_events/japanese/TR_CZE_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_CZE_l_japanese.yml
@@ -46,3 +46,17 @@ TR_czech_BANcom_news.1: "第三次プラハ窓外放出事件"
 TR_czech_BANcom_news.1.t: "第三次プラハ窓外放出事件"
 TR_czech_BANcom_news.1.d: "チェコで共産主義者の徹底的な摘発が行われた。最後の共産主義者の指導者は飛び降り自殺したという..."
 TR_czech_BANcom_news.1.a: "凄まじい..."
+
+
+TR_czech.9.t: "チェコがスラブ協商への加盟を請願"
+TR_czech.9.d: "チェコ政府が今日の情勢を受けてスラブ協商への加盟の許可を求めてきた。我々はどうするべきだろうか？"
+TR_czech.9.a: "もちろん許可しよう"
+TR_czech.9.b: "断る"
+
+TR_czech.10.t: "ロシアがスラブ協商への加盟を許可"
+TR_czech.10.d: "ロシア政府はスラブ協商への加盟の許可した。"
+TR_czech.10.a: "素晴らしい！"
+
+TR_czech.10.t: "ロシアがスラブ協商への加盟を拒否"
+TR_czech.10.d: "ロシア政府はスラブ協商への加盟の拒否した。"
+TR_czech.10.a: "そんなことがあるのか？"
