--- a/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
@@ -40,6 +40,7 @@
  CZE_dem5: "チェコ工科大学"
  CZE_dem6: "民主主義の最後の砦"
  CZE_ban_com: "アカどもを窓から放り捨てろ！"
+ CZE_join_rus: "ロシアとの同盟"
 
  CZE_fall_com: "インターナショナルの崩壊"
  CZE_dip1: "現実外交"
