--- a/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
@@ -1,7 +1,5 @@
 ﻿l_japanese:
 VIN_1: "第一次四ヵ年計画の報告書"
-VINv_1: "未実装！！"
-VINv_1_desc: "そのうち実装されるよ、そう、たぶん、きっと..."
 #左産業
 VIN_CHI_ind1: "経済開発"
 VIN_CHI_ind2: "工業化の進捗"
@@ -120,3 +118,76 @@ VIN_CHI_army18: "外に打って出る"
 VIN_CHI_army19: "対外戦闘への改良"
 VIN_CHI_army20: "火力の補強"
 VIN_CHI_army21: "ドクトリンの強化"
+
+
+
+
+
+#右ルート
+VINv_1: "五か年計画の継続"
+VINv_1_desc: "五か年計画を維持する。我々はアジアで最も発展した国家になるだろう！"
+#五か年計画
+VINv_ind1: "第二次五ヵ年計画の始動"
+VINv_ind2: "三十六年度計画"
+VINv_ind3: "三十七年度計画"
+VINv_ind4: "三十八年度計画"
+VINv_ind5: "三十九年度計画"
+VINv_ind6: "第二次五ヵ年計画の完成"
+#左
+VINv_i1: "a"
+VINv_i2: "a"
+VINv_i3: "a"
+VINv_i4: "a"
+VINv_i5: "a"
+VINv_i6: "a"
+VINv_i7: "a"
+VINv_i8: "a"
+VINv_i9: "a"
+VINv_i10: "a"
+VINv_i11: "a"
+#右
+VINv_r1: "a"
+VINv_r2: "a"
+VINv_r3: "a"
+VINv_r4: "a"
+VINv_r5: "a"
+VINv_r6: "a"
+VINv_r7: "a"
+VINv_r8: "a"
+VINv_r9: "a"
+VINv_r10: "a"
+VINv_r11: "a"
+#外交
+VINv_dip: "外交活動"
+#海
+VINv_dip_nav1: "海軍力の増強" 
+VINv_dip_nav2: "更なる造船所"
+VINv_dip_nav: "英帝の帝国主義を打破"
+VINv_dip_SRL: "セイロン上陸作戦"
+VINv_dip_EAF: "東アフリカへ"
+VINv_dip_inter: "インターナショナルとの合流"
+VINv_dip_MAL: "シンガボール作戦"
+VINv_dip_HOL: "インドネシアを開放"
+VINv_dip_AST: "オーストラリアを打破"
+#陸
+VINv_dip_FRA: "フランスに協調" 
+VINv_dip_land: "陸上での作戦" 
+VINv_dip_land1: "兵士を招集" 
+VINv_dip_land2: "更なる動員拡大" 
+VINv_dip_SIA: "シャム迂回" 
+VINv_dip_RAJ: "インド解放"
+VINv_dip_RAJ2: "インド革命"
+VINv_dip_PER: "ペルシャでの迂回"
+VINv_dip_RUS: "専制君主を打破"
+#アジア
+VINv_dip_JAP: "日本との外交"
+VINv_dip_JAP2: "アジアの共同開放"
+VINv_dip_CHI: "中国共産党を支援"
+VINv_dip_GXC: "縦深を確保"
+VINv_dip_EXC: "広州での革命"
+VINv_dip_CHI1: "中国への支援拡大"
+VINv_dip_CHI2: "武器を支援"
+VINv_dip_CHI3: "政治的支援"
+VINv_dip_CHI4: "超限戦"
+VINv_dip_CHI5: "労農革命"
+VINv_dip_CHI6: "人民の革命"
