--- a/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_ENG_focus_l_japanese.yml
@@ -116,3 +116,9 @@
  TR_ENG_absolute_defense_sphere: "絶対的防衛圏"
  TR_ENG_british_commonwealth: "コモンウェルス"
  TR_ENG_british_commonwealth_desc: "今此処にて帝國は一つとなる。\nすべての帝國自治領が王冠の下にて集い、真の帝國が築かれるであろう。"
+ TR_ENG_expose_faults: "醜態をさらす"
+ TR_ENG_protest_letter_france: "フランスへの抗議状"
+ TR_ENG_intervention_greece: "ギリシャへの介入"
+ TR_ENG_abandon_czecho: "チェコを見捨てる"
+ TR_ENG_engagement_with_france: "フランスへの先制攻撃"
+ TR_ENG_engagement_with_germany: "ドイツへの先制攻撃"
