アメリカには実は人がいた！

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -38,6 +38,9 @@
  MAN_Zhang_Zuolin: "張作霖"
  MAN_Zhang_Xueliang: "張学良"
  
+ USA_Norman_Thomas: "ノルマン・トーマス"
+ USA_Alf_Landon: "アルフ・ランドン"
+ USA_Alf_Landon_desc: "§POLITICS_ALF_LANDON_DESC§"
  USA_Henry_Louis_Mencken: "ヘンリー・ルイス・メンケン"
 
  Ho_Chi_Minh: "ホー・チ・ミン" #VIN
