国際ファランステール

--- a/localisation/TR_common/japanese/technology_sharing_l_japanese.yml
+++ b/localisation/TR_common/japanese/technology_sharing_l_japanese.yml
@@ -1,5 +1,5 @@
 ﻿l_japanese:
  slav_entente_research_name:"スラブ協商共同研究"
  slav_entente_research_desc:"スラブ協商の共同研究プロジェクト"
- inter_research_name:"インターナショナル技術共有"
+ inter_research_name:"国際ファランステール"
  inter_research_desc:"他のインターナショナル加盟国により技術の研究が短縮される"
