Vive la France !

--- a/localisation/TR_events/japanese/TR_global_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_global_events_l_japanese.yml
@@ -1,2 +1,5 @@
 ﻿l_japanese:
  TR_news.1.t: "ワルシャワ開放"
+ TR_news.2.t: "パリ解放"
+ TR_news.2.d: "本日未明、パリより速報だ。赤の聖地とも呼ばれたパリが遂にアルジェ政府軍により解放された。フランス中に広まる相互監視と秘密警察の恐怖に恐れなくても良いと知った全パリ市民は、パリに入った連合軍を歓迎している。"
+ TR_news.2.a: "Vive la France !"
