ポーランド

--- a/localisation/TR_decisions/japanese/TR_POL_decisions_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/TR_POL_decisions_l_japanese.yml
@@ -1,5 +1,6 @@
 ﻿l_japanese:
  TR_POL_resistance: "抵抗運動"
+ TR_RUS_resistance: "$TR_POL_resistance$"
  TR_POL_resistance1: "抵抗運動を扇動"
  TR_POL_resistance2: "抵抗運動を扇動"
  TR_POL_resistance2: "抵抗運動を扇動"
