--- a/localisation/TR_events/japanese/TR_POL_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_POL_events_l_japanese.yml
@@ -9,3 +9,9 @@
  TR_poland.5.t: "[FROM.GetName]が支援を拒絶"
  TR_poland.5.d: "[FROM.GetName]は我々の支援要請を拒絶した。これは全世界の抑圧される農民、労働者の意思を踏みにじる非道な行いだ。"
  TR_poland.5.a: "奴らは何もわかっちゃいない"
+ TR_poland_for_russia.1.t: "ポーランドで農民が抵抗運動を開始"
+ TR_poland_for_russia.1.d: "ポーランドにて農民の不満が高まっている。パリに通じている組織が農民たちへ我が国の支配への抵抗を呼びかけているようだ。"
+ TR_poland_for_russia.1.a: "今すぐ対処せねば"
+ TR_poland_for_russia.2.t: "抵抗運動の拡大"
+ TR_poland_for_russia.2.d: "ポーランドの農民運動は南部にて強まりつつあったが、遂にポーランド中部にまで広まってしまった。農民たちは集団で納税を拒否しており、我が国の秩序を脅かしている。"
+ TR_poland_for_russia.2.a: "もっと根本的な対処が必要だ"
