--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -116,23 +116,6 @@
  GER_neutrality_party_kaiserreich: "DNVP"
  GER_neutrality_party_kaiserreich_long: "ドイツ国家人民党"
  GER_theocracy_party: "キリスト教社会運動"
- POL_fascism_party: "ONR-ファランガ"
- POL_fascism_party_long: "国家急進運動ファランガ"
- POL_natdem_party: "ND"
- POL_natdem_party_long: "国民民主党"
- POL_communism_party: "KPP"
- POL_communism_party_long: "ポーランド共産党"
- POL_democratic_party: "PLD"
- POL_democratic_party_long: "自由民主党"
- POL_socialdemocratic_party: "PSU"
- POL_socialdemocratic_party_long: "ポーランド農民連合"
- POL_neutrality_party: "政府翼賛無政党ブロック"
- POL_OZON_party: "OZN"
- POL_OZON_party_long: "国民再統一同盟" #Camp of National Unity
- POL_POS_party: "POS"
- POL_POS_party_long: "社会普遍機構" #Common Organization of Society
- POL_exile_democratic_party: "PLD"
- POL_exile_democratic_party_long: "自由民主党"
  ITA_communism_party: "イタリア共産党"
  ITA_communism_party_long: "イタリア共産党"
  ITA_democratic_party: "イタリア人民党"
@@ -1216,3 +1199,23 @@
  USA_theocracy_party_long: "末日聖徒イエス・キリスト教会"
  USA_fascism_party: "KKK"
  USA_fascism_party_long: "Ku Klux Klan"
+
+ POL_fascism_party: "ONR-ファランガ"
+ POL_fascism_party_long: "国家急進運動ファランガ"
+ POL_natdem_party: "ND"
+ POL_natdem_party_long: "国民民主党"
+ POL_anarchism_party: ""
+ POL_syndicalism_party: "ポーランド農民連合"
+ POL_communism_party: "KPP"
+ POL_communism_party_long: "ポーランド共産党"
+ POL_socialism_party: "ポーランド社会党"
+ POL_democratic_party: "PLD"
+ POL_democratic_party_long: "自由民主党"
+ POL_socialdemocratic_party: "ポーランド社会民主党"
+ POL_neutrality_party: "政府翼賛無政党ブロック"
+ POL_OZON_party: "OZN"
+ POL_OZON_party_long: "国民再統一同盟" #Camp of National Unity
+ POL_POS_party: "POS"
+ POL_POS_party_long: "社会普遍機構" #Common Organization of Society
+ POL_exile_democratic_party: "PLD"
+ POL_exile_democratic_party_long: "自由民主党"
