--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -6,13 +6,13 @@
  RUS_kirill_vladimirovich: "キリル・ウラジーミロヴィチ"
  RUS_notsar: "空位"
  RUS_Joseph_Stalin: "ヨシフ・ジュガシヴィリ"
+ RUS_georgy_zhukov: "ゲオルギー・ジューコフ"
 
- SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
+ SRI_Gabriele_DAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
  SRI_blank_leader: "指導者不在"
  SRI_pietro_nenni: "ピエトロ・ネンニ"
 
- RUS_georgy_zhukov: "ゲオルギー・ジューコフ"
 
  JAP_tsuyoshi_inukai: "犬養毅"
  JAP_fusanosuke_kuhara: "久原房之介"
@@ -54,3 +54,5 @@
  VIN_tran_quang_vinh: "チャン・クアン・ビン"
  VIN_le_quang_my: "ル・クアン・ミー"
  VIN_tran_van_chon: "トラン・ヴァン・チョン"
+
+ POL_Krakow_: "クラクフ農民連合"
