日本AI研究関連の調整

--- a/localisation/TR_ideas/japanese/TR_JAP_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_JAP_ideas_l_japanese.yml
@@ -40,4 +40,4 @@
  JAP_ARMY_2: "時代遅れの陸軍"
  JAP_ARMY_3: "戦車師団を創設"
  JAP_ARMY_3_desc: "陸軍は次世代の戦争には戦車が主力になることを見抜き、準備を始めている。"
- JAP_ARMY_4: "仮"
+ JAP_ARMY_4: "大和魂"
