チェコ人はもっと生産的なはずだ

--- a/localisation/TR_events/japanese/TR_CZE_REV_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_CZE_REV_l_japanese.yml
@@ -46,3 +46,6 @@
  TR_czech_revolution.9.t: "ドイツで反動主義者が蜂起！"
  TR_czech_revolution.9.d: "我々の目論見は外れ、それどころか国内の反動分子ををむやみに刺激する結果になり南ドイツで人民の敵が蜂起した！"
  TR_czech_revolution.9.a: "ありえない！"
+
+ TR_CZE_REV: "チェコ革命が起きた"
+			
