--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -234,8 +234,8 @@
  HOL_FRA_democratic_subject_DEF: "バタビア共和国"
  CZE_fascism: "ボヘミア帝国"
  CZE_fascism_DEF: "ボヘミア帝国"
- CZE_democratic: "チェコ共和国"
- CZE_democratic_DEF: "チェコ共和国"
+ CZE_democratic: "チェコ国"
+ CZE_democratic_DEF: "チェコ国"
  CZE_neutrality: "ボヘミア王国"
  CZE_neutrality_DEF: "ボヘミア王国"
  CZE_communism: "チェコ社会主義共和国"
