ステート細分化（工場分散はまだ）

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -2,7 +2,7 @@
  STATE_1:0 "コルシカ"
  STATE_2:0 "ラツィオ"
  STATE_3:0 "スイス高原"
- STATE_4:0 "低地オーストリア"
+ STATE_4:0 "ニーダーエスターライヒ"
  STATE_5:0 "エルムラント＝マズーレン"
  STATE_6:0 "フランドル"
  STATE_7:0 "ホラント"
@@ -26,7 +26,7 @@
  STATE_25:0 "リムーザン"
  STATE_26:0 "オーヴェルニュ"
  STATE_27:0 "ブルゴーニュ"
- STATE_28:0 "エルザス＝ロートリンゲン"
+ STATE_28:0 "エルザス"
  STATE_29:0 "ノール＝パ・ド・カレー"
  STATE_30:0 "ロワール"
  STATE_31:0 "ミディ・ピレネー"
@@ -49,11 +49,11 @@
  STATE_48:0 "ソフィア"
  STATE_49:0 "アンカラ"
  STATE_50:0 "ヴュルテンベルク"
- STATE_51:0 "ラインラント"
+ STATE_51:0 "ノルトライン西部"
  STATE_52:0 "オーバーバイエルン"
  STATE_53:0 "ニーダーバイエルン"
- STATE_54:0 "フランケン"
- STATE_55:0 "ヘッセン"
+ STATE_54:0 "ミッテルフランケン"
+ STATE_55:0 "ヘッセン・ナッサウ"
  STATE_56:0 "ヴェーザー＝エムス"
  STATE_57:0 "ヴェストファーレン"
  STATE_58:0 "ホルシュタイン"
@@ -67,12 +67,12 @@
  STATE_66:0 "ニーダーシュレージェン"
  STATE_67:0 "オーバーシュレージェン"
  STATE_68:0 "オストマルク"
- STATE_69:0 "ズデーテンラント"
+ STATE_69:0 "ドイツ・ボヘミア"
  STATE_70:0 "スロヴァキア西部"
  STATE_71:0 "スロヴァキア東部"
  STATE_72:0 "ザオルジェ"
  STATE_73:0 "カルパティア・ルテニア"
- STATE_74:0 "ズデーテンラント東部"
+ STATE_74:0 "ズデーテンラント"
  STATE_75:0 "モラヴィア"
  STATE_76:0 "北トランシルヴァニア"
  STATE_77:0 "ドブルジャ"
@@ -150,7 +150,7 @@
  STATE_149:0 "ヴァーサ"
  STATE_150:0 "クオピオ"
  STATE_151:0 "東スイスアルプス"
- STATE_152:0 "高地オーストリア"
+ STATE_152:0 "オーバーエスターライヒ"
  STATE_153:0 "チロル"
  STATE_154:0 "アルフェルド"
  STATE_155:0 "ドナウ川西岸"
@@ -1044,3 +1044,26 @@
  STATE_1042:0 "トレド"
  STATE_1043:0 "カタルーニャ南部"
  STATE_1044:0 "カタルーニャ北部"
+ STATE_1045:0 "ザクセン・アンハルト"
+ STATE_1046:0 "バーデン"
+ STATE_1047:0 "ポンメレルン"
+ STATE_1048:0 "ノルトライン東部"
+ STATE_1049:0 "プファルツ"
+ STATE_1050:0 "ロートリンゲン"
+ STATE_1051:0 "ベーマーヴァルトガウ"
+ STATE_1052:0 "ザールラント"
+ STATE_1053:0 "ライヒェンベルク"
+ STATE_1054:0 "オルデンブルク"
+ STATE_1055:0 "シュターケンベルク"
+ STATE_1056:0 "オイペン・マルメディ"
+ STATE_1057:0 "ベルリン"
+ STATE_1058:0 "シュタイアーマルク"
+ STATE_1059:0 "ムラメンテ"
+ STATE_1060:0 "ウンターフランケン"
+ STATE_1061:0 "オーバーフランケン"
+ STATE_1062:0 "アッパープファルツ"
+ STATE_1063:0 "ジュヴァーベン"
+ STATE_1064:0 "ザルツブルク"
+ STATE_1065:0 "ケルンテン"
+ STATE_1066:0 "ブルゲンラント"
+ STATE_1067:0 "ツナイム"
