--- a/localisation/TR_ideas/japanese/TR_JAP_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_JAP_ideas_l_japanese.yml
@@ -33,8 +33,8 @@
  JAP_wealth_redistribution_desc: "好景気により私腹を肥やした資本家たちから一般市民へ好景気の影響を等しく受けられるようにしなければならない。"
  JAP_Japanese_style_socialism: "日本型社会主義"
  JAP_Japanese_style_socialism_desc: "上流階級も下級階級も殆どいない一億総中流社会の日本はある意味で最も社会主義の理想を実現しているといえる。"
- JAP_Establishment_of_the_Ministry_of_Labor: "兵部省"
- JAP_Establishment_of_the_Ministry_of_Labor_desc: "明治期に廃止された兵部省は昭和となった今、復活を遂げた。"
+ JAP_BALANCE_ARMMMY_NAVY: "兵部省"
+ JAP_BALANCE_ARMMMY_NAVY_desc: "明治期に廃止された兵部省は昭和となった今、復活を遂げた。"
  JAP_ARMY: "時代遅れの陸軍"
  JAP_ARMY_1: "時代遅れの陸軍"
  JAP_ARMY_2: "時代遅れの陸軍"
