--- a/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
@@ -43,3 +43,4 @@
  BUL_autonomy_imperial_dominion: "帝国自治領ブルガリア"
  FGE_autonomy_imperial_dominion: "帝国自治領フランス"
  MAN_autonomy_imperial_dominion: "帝国自治領満州"
+ government_general: "総督府"
