ドイツの議会ディシジョンのGUI

--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -95,6 +95,8 @@
  Rcoalition: "右派連立"
  GER_anarchism_party: "FAUD"
  GER_anarchism_party_long: "ドイツ自由労働者組合"
+ GER_syndicalism_party: "DGB"
+ GER_syndicalism_party_long: "ドイツ労働組合連盟"
  GER_fascism_party: "NSAP"
  GER_fascism_party_long: "国民社会主義労働者党"
  GER_communism_party: "KPD"
@@ -109,13 +111,15 @@
  GER_socialdemocratic_party_long: "ドイツ旧社会民主党"
  GER_democratic_party: "DDP"
  GER_democratic_party_long: "ドイツ民主党"
- GER_conservatism_party: "フェルキッシュ運動"
+ GER_conservatism_party: "FB"
+ GER_conservatism_party_long: "フェルキッシュ運動"
  GER_neutrality_party: "鉄兜団"
  GER_neutrality_party_long: "鉄兜団、前線兵士同盟"
  GER_neutrality_party_civil_war: "軍事政府"
  GER_neutrality_party_kaiserreich: "DNVP"
  GER_neutrality_party_kaiserreich_long: "ドイツ国家人民党"
- GER_theocracy_party: "キリスト教社会運動"
+ GER_theocracy_party: "CSB"
+ GER_theocracy_party_long: "キリスト教社会運動"
  ITA_communism_party: "イタリア共産党"
  ITA_communism_party_long: "イタリア共産党"
  ITA_democratic_party: "イタリア人民党"
