--- a/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
@@ -1,3 +1,20 @@
 ﻿l_japanese:
-military_com_focus: "大量動員"
-TR_hidden_war_nosurrender: "降伏限界100%"
+ traditional_economy: "伝統経済"
+ traditional_economy_desc: "伝統経済の説明"
+ TR_traditional_economy_modifier: "£pol_idea $traditional_economy$"
+ traditional_economy_modifier_tt: "$TE_consumer_goods_factor$$TE_industrial_capacity_factory$$TE_industrial_capacity_dockyard$$TE_production_speed_buildings_factor$$TE_local_resources_factor$$TE_supply_node_range$"
+ TE_consumer_goods_factor: "[ROOT.GetCGF]"
+ TE_industrial_capacity_factory: "[ROOT.GetICF]"
+ TE_industrial_capacity_dockyard: "[ROOT.GetICD]"
+ TE_production_speed_buildings_factor: "[ROOT.GetPSBF]"
+ TE_local_resources_factor: "[ROOT.GetLRF]"
+ TE_supply_node_range: "[ROOT.GetSNR]"
+ TE_CGF_tt: "$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y[?rus_TE_consumer_goods_factor|%.1]§!\n"
+ TE_ICF_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: [?rus_TE_industrial_capacity_factor|%+]\n"
+ TE_ICD_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR$: [?rus_TE_industrial_capacity_dockyard|%+]\n"
+ TE_PSBF_tt: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?rus_TE_production_speed_buildings_factor|%+]\n"
+ TE_LRF_tt: "$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?rus_TE_local_resources_factor|%+]\n"
+ TE_SNR_tt: "$MODIFIER_SUPPLY_NODE_RANGE$: [?rus_TE_supply_node_range|%+]\n"
+ 
+ military_com_focus: "大量動員"
+ TR_hidden_war_nosurrender: "降伏限界100%"
