伝統経済　NFツールチップ

--- a/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
@@ -15,6 +15,18 @@
  TE_PSBF_tt: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?rus_TE_production_speed_buildings_factor|%+]\n"
  TE_LRF_tt: "$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?rus_TE_local_resources_factor|%+]\n"
  TE_SNR_tt: "$MODIFIER_SUPPLY_NODE_RANGE$: [?rus_TE_supply_node_range|%+]\n"
- 
+ TE_update_modifier: "§Y$traditional_economy$§!に以下の補正：\n$TE_updt_consumer_goods_factor$$TE_updt_industrial_capacity_factory$$TE_updt_industrial_capacity_dockyard$$TE_updt_production_speed_buildings_factor$$TE_updt_local_resources_factor$$TE_updt_supply_node_range$"
+ TE_updt_consumer_goods_factor: "[ROOT.UpdtCGF]"
+ TE_updt_industrial_capacity_factory: "[ROOT.UpdtICF]"
+ TE_updt_industrial_capacity_dockyard: "[ROOT.UpdtICD]"
+ TE_updt_production_speed_buildings_factor: "[ROOT.UpdtPSBF]"
+ TE_updt_local_resources_factor: "[ROOT.UpdtLRF]"
+ TE_updt_supply_node_range: "[ROOT.UpdtSNR]"
+ TE_updt_CGF_tt: "$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y[?updt_consumer_goods_factor|%.1]§!\n"
+ TE_updt_ICF_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: [?updt_industrial_capacity_factor|%+]\n"
+ TE_updt_ICD_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR$: [?updt_industrial_capacity_dockyard|%+]\n"
+ TE_updt_PSBF_tt: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?updt_production_speed_buildings_factor|%+]\n"
+ TE_updt_LRF_tt: "$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?updt_local_resources_factor|%+]\n"
+ TE_updt_SNR_tt: "$MODIFIER_SUPPLY_NODE_RANGE$: [?updt_supply_node_range|%+]\n"
  military_com_focus: "大量動員"
  TR_hidden_war_nosurrender: "降伏限界100%"
