--- a/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
@@ -39,3 +39,5 @@
 
  RUS_economy_modification_tt: "§Yフォルケメット§!に以下の補正: "
  consumer_goods_factor_whitespace_tt: " $consumer_goods_factor_tt$"
+ RUS_TE_tt_1:"§Y反動派§!が着服していた§G政治予算の調整§!を行う！"
+ RUS_TE_tt_1_2:"§Y反動派§!は§R強い怒りを感じる§!だろう！"
