ベトナム右ツリー見た目だけ

--- a/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
@@ -134,31 +134,31 @@ VINv_ind4: "三十八年度計画"
 VINv_ind5: "三十九年度計画"
 VINv_ind6: "第二次五ヵ年計画の完成"
 #左
-VINv_i1: "a"
-VINv_i2: "a"
-VINv_i3: "a"
-VINv_i4: "a"
-VINv_i5: "a"
-VINv_i6: "a"
-VINv_i7: "a"
-VINv_i8: "a"
-VINv_i9: "a"
-VINv_i10: "a"
-VINv_i11: "a"
+VINv_i1: "研究1"
+VINv_i2: "研究2"
+VINv_i3: "研究3"
+VINv_i4: "研究4"
+VINv_i5: "工業1"
+VINv_i6: "工業2"
+VINv_i7: "工業3"
+VINv_i8: "工業4"
+VINv_i9: "インフラ1"
+VINv_i10: "インフラ2"
+VINv_i11: "工業化の完成"
 #右
-VINv_r1: "a"
-VINv_r2: "a"
-VINv_r3: "a"
-VINv_r4: "a"
-VINv_r5: "a"
-VINv_r6: "a"
-VINv_r7: "a"
-VINv_r8: "a"
-VINv_r9: "a"
-VINv_r10: "a"
-VINv_r11: "a"
+VINv_r1: "鉱業1"
+VINv_r2: "鉱業2"
+VINv_r3: "鉱業3"
+VINv_r4: "鉱業4"
+VINv_r5: "農業1"
+VINv_r6: "農業2"
+VINv_r7: "農業3"
+VINv_r8: "農業4"
+VINv_r9: "漁業1"
+VINv_r10: "漁業2"
+VINv_r11: "一次産業の発展"
 #外交
-VINv_dip: "外交活動"
+VINv_dip1: "外交活動"
 #海
 VINv_dip_nav1: "海軍力の増強" 
 VINv_dip_nav2: "更なる造船所"
