--- a/localisation/TR_events/japanese/TR_MANchine_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_MANchine_events_l_japanese.yml
@@ -10,7 +10,7 @@
  TR_FJN.1.a: "前進！前進！"
 
  TR_MAN.2.t: "内戦！"
- TR_MAN.2.d: "[RUS.GetName]からの独立を狙う[POL.GetName]は我々に対して支援を要請している。"
+ TR_MAN.2.d: "内戦だ！共産党と山西軍閥は我々に叛旗を翻した！"
  TR_MAN.2.a: "我々の政権はもう終わってしまうのか？"
  TR_MAN.2.b: "中国共産党でプレイ"
  TR_MAN.2.c: "山西軍閥でプレイ"
