--- a/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
+++ b/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
@@ -2,19 +2,20 @@
  TR_MAIN_SCENARIO_NAME:"赤き波"
  TR_MAIN_SCENARIO_DESC:"先の大戦争が終わった後、ヨーロッパでは第3インターナショナルをはじめとする共産主義支配が広まっている。\n戦争の勝者たるロシア帝国は、反動的な皇帝の支配によって共産主義に蝕まれてゆく。\n海の女王たる大英帝国もまた、大陸の体制に懐疑的だ。\n平和が訪れてからも行われている大国同士の水面下での競争はこのまま新たな大戦争を生み出す起爆剤となるかもしれない。"
 
- TR_MAIN_FACTION_SLAVENTENTE:"§rスラヴ協商§!"
- TR_MAIN_FACTION_ALLIES:"§u連合国・旧協商§!"
- TR_MAIN_FACTION_INTERNATIONAL:"§R第三インターナショナル§!"
+ TR_MAIN_FACTION_SLAVENTENTE: "§rスラヴ協商§!"
+ TR_MAIN_FACTION_ALLIES: "§u連合国・旧協商§!"
+ TR_MAIN_FACTION_INTERNATIONAL: "§R第三インターナショナル§!"
 
- TR_RUS_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争ではドイツ帝国を攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
+ TR_RUS_MAIN_SCENARIO_DESC: "$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争ではドイツ帝国を攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
 
- TR_ENG_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_ALLIES$の盟主イギリスは、欧州大陸の共産主義の拡大に強い懸念を示している。\n先の大戦争で圧倒的な海の王者であることを証明したイギリスは、その後もロシアと建艦競争を行い、世界首位の海軍力で欧州の海を自らの支配下に置いている。\n共産主義の台頭によって、植民地や自治領でも過激な思想が発生し、ロンドンはその対応に追われているようだ。\n大英帝国の栄光を保つために、我々はかつての盟友フランス、ロシアと共に共産主義者を破壊しなければならない。戦いの時は迫りつつある。"
+ TR_ENG_MAIN_SCENARIO_DESC: "$TR_MAIN_FACTION_ALLIES$の盟主イギリスは、欧州大陸の共産主義の拡大に強い懸念を示している。\n先の大戦争で圧倒的な海の王者であることを証明したイギリスは、その後もロシアと建艦競争を行い、世界首位の海軍力で欧州の海を自らの支配下に置いている。\n共産主義の台頭によって、植民地や自治領でも過激な思想が発生し、ロンドンはその対応に追われているようだ。\n大英帝国の栄光を保つために、我々はかつての盟友フランス、ロシアと共に共産主義者を破壊しなければならない。戦いの時は迫りつつある。"
 
- TR_GER_MAIN_SCENARIO_DESC:"§Rドイツ自由社会主義共和国§!は、§R第三インターナショナル§!に加盟する国家である。\n革命に揺れるパリに呼応して1918年11月に始まったドイツ革命は、ドイツの全てを変えてしまった。それまでユンカーや資本家が主流だった政治基盤は§R労働者と兵士による評議会§!に置き換えられ、ローザ・ルクセンブルクやカール・リープクネヒトを筆頭とする共産主義者によって民主政治が行われている。\nしかし、§u大戦争§!の結果として我らの故地§1プロイセン§!が§rロシア帝国§!に奪われてしまった事は、ゲルマン民族主義者に大きな衝撃を与えた。§1失われた旧領土の奪還§!を掲げる彼らは評議会においてその勢力を急速に拡大し、共産主義者にとって大きな脅威となっている。"
+ TR_GER_MAIN_SCENARIO_DESC: "§Rドイツ自由社会主義共和国§!は、§R第三インターナショナル§!に加盟する国家である。\n革命に揺れるパリに呼応して1918年11月に始まったドイツ革命は、ドイツの全てを変えてしまった。それまでユンカーや資本家が主流だった政治基盤は§R労働者と兵士による評議会§!に置き換えられ、ローザ・ルクセンブルクやカール・リープクネヒトを筆頭とする共産主義者によって民主政治が行われている。\nしかし、§u大戦争§!の結果として我らの故地§1プロイセン§!が§rロシア帝国§!に奪われてしまった事は、ゲルマン民族主義者に大きな衝撃を与えた。§1失われた旧領土の奪還§!を掲げる彼らは評議会においてその勢力を急速に拡大し、共産主義者にとって大きな脅威となっている。"
 
- TR_FRA_MAIN_SCENARIO_DESC:"§Rフランス§!は§Rインターナショナル§!の盟主にして欧州初の革命政府ではあるが、革命後の連立政権が崩壊して以降、政治的混沌を極めている。\nこの情勢に国民は失望しており、更に§0雇用の問題§!や§0人口動態の問題§!などを抱えており、これらの諸問題に対応しなければならないだろう。\nまた、外に目を向けてみると§Bフランス領アフリカ§!は未だに§Bフランス共和国§!を僭称する奴らに占拠されており、§Bカレー§!と§Bシェルブール§!は§Bイギリス§!が大戦の終結間際にどさくさに紛れて占拠している...我々はこれらの不当に占拠された土地を取り戻すことはできるのだろうか？"
+ TR_FRA_MAIN_SCENARIO_DESC: "§Rフランス§!は§Rインターナショナル§!の盟主にして欧州初の革命政府ではあるが、革命後の連立政権が崩壊して以降、政治的混沌を極めている。\nこの情勢に国民は失望しており、更に§0雇用の問題§!や§0人口動態の問題§!などを抱えており、これらの諸問題に対応しなければならないだろう。\nまた、外に目を向けてみると§Bフランス領アフリカ§!は未だに§Bフランス共和国§!を僭称する奴らに占拠されており、§Bカレー§!と§Bシェルブール§!は§Bイギリス§!が大戦の終結間際にどさくさに紛れて占拠している...我々はこれらの不当に占拠された土地を取り戻すことはできるのだろうか？"
 
- TR_SRI_MAIN_SCENARIO_DESC:"この国は§R共産主義§!の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦する可能性が高い。"
+ TR_SRI_MAIN_SCENARIO_DESC: "§Gイタリア§!は先の大戦の勝者であるものの、ずさんな戦後処理に怒ったダンヌンツィオがフィウメを占領師たことを発端として南北に分かれた内戦が始まった。内戦には$TR_MAIN_FACTION_INTERNATIONAL$やイギリス、ロシアが介入し、戦線が膠着した末1922年に遂に休戦協定が結ばれた。\n\n戦後の§R北イタリア§!では国民サンディカリストと社会主義者の間で対立が発生しており、また$TR_MAIN_FACTION_INTERNATIONAL$とも思想の違いにより対立し、外交的にも孤立しつつある。その不安定さは、社会主義者がダンヌンツィオを暗殺を企てているのではないかと噂されるほどである。この波乱の時代にイタリアはどうなってしまうのだろうか？"
+#  §Gイタリア§!は先の大戦に勝利したもののかねてより望んでいたフィウメの地を得られなかった。ダンヌンツィオはそれに激怒し、フィウメ占領を行った。王国政府は他国との関係悪化を恐れこれを鎮圧せんとしたが、これに対しダンヌンツィオを支持する民衆が反旗を翻した。更に社会主義者までもが蜂起を行いイタリアでは南北に分かれた内戦が発生する。インターナショナルやイギリスはこれに介入し内戦は激化。その後戦線の膠着の末、1923年にイタリアでは休戦協定が結ばれ、イタリアは南北に分断されてしまった。\n戦後の北イタリアでは国民サンディカリストと社会主義者の間で対立が発生しており、またインターナショナルとの思想の違いにより外交的にも孤立しつつある。この波乱の時代にイタリアはどうなってしまうのだろうか？
 
  TR_JAP_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った大日本帝国はその後も順調に国力を伸ばし、アジア唯一の列強と自負している。1920年代の相次ぐ経済危機も高橋是清蔵相による積極財政で乗り越えた。しかし、長引く積極財政によって引き起こされたインフレに国民は苦しんでいる。そのうえ、国民は今の大日本帝国の国際地位が低すぎると考え対外進出を求めている。旭日は世界を照らすのだろうか？"
 
