--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -2,6 +2,13 @@
  socialism_acceptance: "社会主義との外交の寛容"
  socialdemocratic_acceptance: "社会民主主義との外交の寛容"
  conservatism_acceptance: "保守主義との外交の寛容"
+ anarchism: "無政府主義"
+ anarchism_noun: "無政府主義"
+ anarchism_desc: "無政府国家"
+#  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
+ syndicalism: "労働組合主義"
+ syndicalism_noun: "労働組合主義"
+ syndicalism_desc: "労働組合主義政権"
  communism: "共産主義"
  communism_noun: "共産主義"
  socialism: "社会主義"
@@ -13,15 +20,11 @@
  fascism: "結束主義"
  fascism_noun: "結束主義"
  fascism_desc: "結束主義政権"
- syndicalism: "労働組合主義"
- syndicalism_noun: "労働組合主義"
- syndicalism_desc: "労働組合主義政権"
  communism_desc: "社会主義政権"
  democratic_desc: "民主主義政権"
  conservatism: "保守主義"
  conservatism_noun: "保守主義"
- coalition: "連立"
- coalition_noun: "連立"
+ conservatism_desc: "保守主義政権"
  liberalism: "自由主義" 
  liberalism_desc: "個人の自由に価値を置く哲学的な長い伝統から、自由主義は諸権利の保護を国家第一の役割と考える。"
  socialism_desc: "改良主義的手段によって平等及び社会主義国家を追求すべく、民主社会主義は国民の信任にもとづいて資本主義の影響を軽減ないし無効化することを目指す。"
@@ -59,10 +62,9 @@
  centrism: "穏健主義"
  centrism_desc: "穏健主義は適切に現在と未来のニーズに対処する常識的な解決策の実現を望む政府の一形態である。そしてこれは国民の負託を支えとしてこれらのニーズの状況におけるリスクと許容量を考慮し、公益を提供する。"
  theocracy: "神権主義"
- anarchism: "無政府主義"
- anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
  anarchist_communism: "無政府共産主義"
  national_syndicalism: "国家サンディカリズム"
+ national_syndicalism_desc: "国家サンディカリズムはアナキズムやマルクス主義のプロレタリア国際主義に反対し、軍国主義とナショナリズムを支持する思想である。"
  libertarianism: "リバタリアニズム"
  catholicism: "カトリック"
  protestantism: "プロテスタント"
