--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -20,6 +20,7 @@
  JAP_osachi_hamaguchi: "浜口雄幸"
  JAP_chuji_machida: "町田忠治"
  JAP_iso_abe: "安部磯雄"
+ NAB_nabla: "∇"
  JAP_Korekiyo_Takahashi: "高橋是清"
  JAP_seigo_nakano: "中野正剛"
  JAP_Nobusuke_Kishi: "岸信介"
