--- a/localisation/TR_ideas/japanese/TR_VIN_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_VIN_ideas_l_japanese.yml
@@ -11,6 +11,7 @@
  TR_VIN_rice1: "コメの価格統制"
  TR_VIN_ind: "好景気"
  TR_VIN_CHIwar: "統一戦争の開始"
+ TR_VIN_CHIwar1: "統一戦争の継続"
  #ベトナムの精神
  TR_VIN_land: "ベトナムのゲリラ精神"
  TR_VIN_land1: "ベトナムのゲリラ精神"
