--- a/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
@@ -41,3 +41,5 @@
  consumer_goods_factor_whitespace_tt: " $consumer_goods_factor_tt$"
  RUS_TE_tt_1:"§Y反動派§!が着服していた§G政治予算の調整§!を行う！"
  RUS_TE_tt_1_2:"§Y反動派§!は§R強い怒りを感じる§!だろう！"
+ RUS_TE_tt_2:"1935年の不健全な予算を§R撤回する！§!"
+ RUS_TE_tt_3:"§Y資源地帯§!の工場を解体する！"
