--- a/localisation/TR_ideas/japanese/TR_USA_idea_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_USA_idea_l_japanese.yml
@@ -5,10 +5,10 @@
  #大恐慌―効果
  TR_great_depression_modifier: "£pol_idea $TR_great_depression_idea$"
  great_depression_idea_modifier_tt: "$GD_pp_cost$$GD_cg_factor$$GD_c_factor$$GD_lr_factor$"
- GD_pp_cost: "[ROOT.GetGD_PPC]"
- GD_cg_factor: "[ROOT.GetGD_CFF]"
- GD_c_factor: "[ROOT.GetGD_CF]"
- GD_lr_factor: "[ROOT.GetGD_LRF]"
+ GD_pp_cost: "[PREV.GetGD_PPC]"
+ GD_cg_factor: "[PREV.GetGD_CFF]"
+ GD_c_factor: "[PREV.GetGD_CF]"
+ GD_lr_factor: "[PREV.GetGD_LRF]"
  GD_pp_cost_tt: "$MODIFIER_POLITICAL_POWER_COST$: [?usa_GD_pp_cost_var|-Y]\n"
  GD_cg_factor_tt: "$MODIFIER_CONSUMER_GOODS_FACTOR$: [?usa_GD_cg_factor_var|Y%.1]\n"
  GD_c_factor_tt: "$MODIFIER_CONSCRIPTION_FACTOR$: [?usa_GD_c_factor_var|Y%+]\n"
