--- a/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ideas_l_japanese.yml
@@ -3,18 +3,18 @@
  traditional_economy_desc: "伝統経済の説明"
  TR_traditional_economy_modifier: "£pol_idea $traditional_economy$"
  traditional_economy_modifier_tt: "$TE_consumer_goods_factor$$TE_industrial_capacity_factory$$TE_industrial_capacity_dockyard$$TE_production_speed_buildings_factor$$TE_local_resources_factor$$TE_supply_node_range$"
- TE_consumer_goods_factor: "[RUS.GetCGF]"
- TE_industrial_capacity_factory: "[RUS.GetICF]"
- TE_industrial_capacity_dockyard: "[RUS.GetICD]"
- TE_production_speed_buildings_factor: "[RUS.GetPSBF]"
- TE_local_resources_factor: "[RUS.GetLRF]"
- TE_supply_node_range: "[RUS.GetSNR]"
- TE_CGF_tt: "$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y[?RUS.rus_TE_consumer_goods_factor|%.1]§!\n"
- TE_ICF_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: [?RUS.rus_TE_industrial_capacity_factor|%+]\n"
- TE_ICD_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR$: [?RUS.rus_TE_industrial_capacity_dockyard|%+]\n"
- TE_PSBF_tt: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?RUS.rus_TE_production_speed_buildings_factor|%+]\n"
- TE_LRF_tt: "$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?RUS.rus_TE_local_resources_factor|%+]\n"
- TE_SNR_tt: "$MODIFIER_SUPPLY_NODE_RANGE$: [?RUS.rus_TE_supply_node_range|%+]\n"
+ TE_consumer_goods_factor: "[PREV.GetCGF]"
+ TE_industrial_capacity_factory: "[PREV.GetICF]"
+ TE_industrial_capacity_dockyard: "[PREV.GetICD]"
+ TE_production_speed_buildings_factor: "[PREV.GetPSBF]"
+ TE_local_resources_factor: "[PREV.GetLRF]"
+ TE_supply_node_range: "[PREV.GetSNR]"
+ TE_CGF_tt: "$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y[?PREV.rus_TE_consumer_goods_factor|%.1]§!\n"
+ TE_ICF_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: [?PREV.rus_TE_industrial_capacity_factor|%+]\n"
+ TE_ICD_tt: "$MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR$: [?PREV.rus_TE_industrial_capacity_dockyard|%+]\n"
+ TE_PSBF_tt: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?PREV.rus_TE_production_speed_buildings_factor|%+]\n"
+ TE_LRF_tt: "$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?PREV.rus_TE_local_resources_factor|%+]\n"
+ TE_SNR_tt: "$MODIFIER_SUPPLY_NODE_RANGE$: [?PREV.rus_TE_supply_node_range|%+]\n"
  TE_update_modifier: "§Y$traditional_economy$§!に以下の補正:\n$TE_updt_consumer_goods_factor$$TE_updt_industrial_capacity_factory$$TE_updt_industrial_capacity_dockyard$$TE_updt_production_speed_buildings_factor$$TE_updt_local_resources_factor$$TE_updt_supply_node_range$"
  TE_updt_consumer_goods_factor: "[RUS.UpdtCGF]"
  TE_updt_industrial_capacity_factory: "[RUS.UpdtICF]"
