--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -3,7 +3,16 @@
  ECONOMIC_BUDGET: "予算"
  BUDGET_INCOME: "歳入"
  taxes_ratio: "税率"
- taxes_ratio_percentage: "[?|%.0Y]"
+ taxes_ratio_percentage: "[?ROOT.EV_taxes_ratio_var|%.0Y]"
  currency_issue: "通貨発行"
  government_bond: "国債"
+ diplomatic_income: "外交協定"
+ import_tax: "関税"
  BUDGET_EXPENSES: "歳出"
+ war_expenses: "軍事費"
+ social_security: "社会保障費"
+ social_security_percentage: "[?ROOT.EV_social_security_var|%.0Y]"
+ pay_government_bond: "国債償還"
+ civil_servant_saraly: "公務員給与"
+ civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
+ building_expenses: "建設費"
