暫定税収入

--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -1,9 +1,14 @@
 ﻿l_japanese:
+ MONEY_VALUE: "G[?ROOT.money_value|+Y]M"
+ money_tt: "§Y国庫§!"
  ECONOMIC_ECONOMIC: "経済"
  ECONOMIC_BUDGET: "予算"
  BUDGET_INCOME: "歳入"
  taxes_ratio: "税率"
  taxes_ratio_percentage: "[?ROOT.EV_taxes_ratio_var|%.0Y]"
+ taxes_amount: "§Y+G§![?EV_taxes_amount_var_k|Y]§YM§"
+ taxes_amount_gotten_p: "§Y+$$§![?EV_taxes_amount_var_k|Y]§YM§"
+ taxes_amount_gotten_n: "§R$$§![?EV_taxes_amount_var_k|Y]K"
  currency_issue: "通貨発行"
  government_bond: "国債"
  diplomatic_income: "外交協定"
@@ -16,3 +21,12 @@
  civil_servant_saraly: "公務員給与"
  civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
  building_expenses: "建設費"
+ BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
+ BUDGET_LOG2: "RUS:[?RUS.EV_taxes_amount_var_k]M"
+ BUDGET_LOG3: "GER:[?GER.EV_taxes_amount_var_k]M"
+ BUDGET_LOG4: "FRA:[?FRA.EV_taxes_amount_var_k]M"
+ BUDGET_LOG5: "JAP:[?JAP.EV_taxes_amount_var_k]M"
+ BUDGET_LOG6: "ENG:[?ENG.EV_taxes_amount_var_k]M"
+ BUDGET_LOG7: "MAN:[?MAN.EV_taxes_amount_var_k]M"
+ BUDGET_LOG8: "SER:[?SER.EV_taxes_amount_var_k]M"
+ BUDGET_LOG9: "SRI:[?SRI.EV_taxes_amount_var_k]M"
