--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -1,12 +1,12 @@
 ﻿l_japanese:
- MONEY_VALUE: "G[?ROOT.money_value|+]M"
+ MONEY_VALUE: "G[?ROOT.money_value|+.3]M"
  money_tt: "§Y国庫§!"
  ECONOMIC_ECONOMIC: "経済"
  ECONOMIC_BUDGET: "予算"
  BUDGET_INCOME: "歳入"
  taxes_ratio: "税率"
  taxes_ratio_percentage: "[?ROOT.EV_taxes_ratio_var|%.0Y]"
- taxes_amount: "§Y+G§![?EV_taxes_amount_var_k|Y]§YM§"
+ taxes_amount: "§Y+G§![?EV_taxes_amount_var_k|Y.3]§YM§"
  taxes_amount_gotten_p: "§Y+$$§![?EV_taxes_amount_var_k|Y]§YM§"
  taxes_amount_gotten_n: "§R$$§![?EV_taxes_amount_var_k|Y]K"
  currency_issue: "通貨発行"
