--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -1,12 +1,15 @@
 ﻿l_japanese:
- MONEY_VALUE: "G[?ROOT.money_value|+.3]M"
- money_tt: "§Y国庫§!"
+ MONEY_VALUE: "G[?ROOT.money_value|.3]M"
+ MONEY_MONEY: "国庫"
+ money_tt: "[GetMonetToolTip]"
+ MONEY_tt: "§Y$MONEY_MONEY$§!\n§Y$BUDGET_INCOME$§!\n $taxes_ratio$: $taxes_amount$ \n 以下の影響を受ける\n  民需工場: [?num_of_civilian_factories|Y.0]\n  人口: [?max_manpower_k|Y]§Yk§!\n  税率: §Y$taxes_ratio_percentage$§!\n $diplomatic_income$:\n $import_tax$:\n§Y$BUDGET_EXPENSES$§!\n $social_security$:\n $civil_servant_saraly$:\n $pay_government_bond$:\n $war_expenses$:\n $building_expenses$:"
+ MONEY_tt_delayed: ""
  ECONOMIC_ECONOMIC: "経済"
  ECONOMIC_BUDGET: "予算"
  BUDGET_INCOME: "歳入"
- taxes_ratio: "税率"
+ taxes_ratio: "税収"
  taxes_ratio_percentage: "[?ROOT.EV_taxes_ratio_var|%.0Y]"
- taxes_amount: "§Y+G§![?EV_taxes_amount_var_k|Y.3]§YM§"
+ taxes_amount: "§Y+G§![?EV_taxes_amount_var_k|Y.3]§YM§!"
  taxes_amount_gotten_p: "§Y+$$§![?EV_taxes_amount_var_k|Y]§YM§"
  taxes_amount_gotten_n: "§R$$§![?EV_taxes_amount_var_k|Y]K"
  currency_issue: "通貨発行"
@@ -14,11 +17,11 @@
  diplomatic_income: "外交協定"
  import_tax: "関税"
  BUDGET_EXPENSES: "歳出"
- war_expenses: "軍事費"
  social_security: "社会保障費"
  social_security_percentage: "[?ROOT.EV_social_security_var|%.0Y]"
- pay_government_bond: "国債償還"
  civil_servant_saraly: "公務員給与"
+ pay_government_bond: "国債償還"
+ war_expenses: "軍事費"
  civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
  building_expenses: "建設費"
  BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
