--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -23,9 +23,10 @@
  social_security: "社会保障費"
  social_security_percentage: "[?ROOT.EV_social_security_var|%.0Y]"
  civil_servant_saraly: "公務員給与"
+ civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
  pay_government_bond: "国債償還"
  war_expenses: "軍事費"
- civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
+ war_expenses_percentage: "[?ROOT.EV_war_expenses_var|%.0Y]"
  building_expenses: "建設費"
  BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
  BUDGET_LOG2: "RUS:[?RUS.EV_taxes_amount_var_k]M"
